tests/neg/abstract-report2.check
-- Error: tests/neg/abstract-report2.scala:3:6 -------------------------------------------------------------------------
3 |class Foo extends Collection[Int] // error
  |      ^
  |      class Foo needs to be abstract.
  |      Missing implementations for 14 members.
  |        // Members declared in java.util.Collection
  |        def add(x$0: Int): Boolean = ???
  |        def addAll(x$0: java.util.Collection[? <: Int]): Boolean = ???
  |        def clear(): Unit = ???
  |        def contains(x$0: Object): Boolean = ???
  |        def containsAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def isEmpty(): Boolean = ???
  |        def iterator(): java.util.Iterator[Int] = ???
  |        def remove(x$0: Object): Boolean = ???
  |        def removeAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def retainAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def size(): Int = ???
  |        def toArray(): Array[Object] = ???
  |        def toArray[T](x$0: Array[Object & T]): Array[Object & T] = ???
  |        
  |        // Members declared in java.lang.Iterable
  |        def iterator(): java.util.Iterator[Int] = ???
-- Error: tests/neg/abstract-report2.scala:5:6 -------------------------------------------------------------------------
5 |class Bar extends Collection[List[_ <: String]] // error
  |      ^
  |      class Bar needs to be abstract.
  |      Missing implementations for 14 members.
  |        // Members declared in java.util.Collection
  |        def add(x$0: List[? <: String]): Boolean = ???
  |        def addAll(x$0: java.util.Collection[? <: List[? <: String]]): Boolean = ???
  |        def clear(): Unit = ???
  |        def contains(x$0: Object): Boolean = ???
  |        def containsAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def isEmpty(): Boolean = ???
  |        def iterator(): java.util.Iterator[List[? <: String]] = ???
  |        def remove(x$0: Object): Boolean = ???
  |        def removeAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def retainAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def size(): Int = ???
  |        def toArray(): Array[Object] = ???
  |        def toArray[T](x$0: Array[Object & T]): Array[Object & T] = ???
  |        
  |        // Members declared in java.lang.Iterable
  |        def iterator(): java.util.Iterator[List[? <: String]] = ???
-- Error: tests/neg/abstract-report2.scala:7:6 -------------------------------------------------------------------------
7 |class Baz[T] extends Collection[T]  // error
  |      ^
  |      class Baz needs to be abstract.
  |      Missing implementations for 14 members.
  |        // Members declared in java.util.Collection
  |        def add(x$0: T): Boolean = ???
  |        def addAll(x$0: java.util.Collection[? <: T]): Boolean = ???
  |        def clear(): Unit = ???
  |        def contains(x$0: Object): Boolean = ???
  |        def containsAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def isEmpty(): Boolean = ???
  |        def iterator(): java.util.Iterator[T] = ???
  |        def remove(x$0: Object): Boolean = ???
  |        def removeAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def retainAll(x$0: java.util.Collection[?]): Boolean = ???
  |        def size(): Int = ???
  |        def toArray(): Array[Object] = ???
  |        def toArray[T](x$0: Array[Object & T]): Array[Object & T] = ???
  |        
  |        // Members declared in java.lang.Iterable
  |        def iterator(): java.util.Iterator[T] = ???
-- Error: tests/neg/abstract-report2.scala:21:6 ------------------------------------------------------------------------
21 |class Dingus extends Bippy[String, Set[Int], List[Int]] // error
   |      ^
   |class Dingus needs to be abstract.
   |Missing implementations for 7 members.
   |  // Members declared in scala.collection.IterableOnce
   |  def iterator: Iterator[(Set[Int], String)] = ???
   |  
   |  // Members declared in scala.collection.IterableOps
   |  protected def coll: List[(Set[Int], String)] = ???
   |  protected def fromSpecific(coll: IterableOnce[(Set[Int], String) @uncheckedVariance]): List[(Set[Int], String)] = ???
   |  def iterableFactory: scala.collection.IterableFactory[List] = ???
   |  protected def newSpecificBuilder: 
   |  scala.collection.mutable.Builder[(Set[Int], String) @uncheckedVariance, List[(Set[Int], String)]] = ???
   |  def toIterable: Iterable[(Set[Int], String)] = ???
   |  
   |  // Members declared in Xyz
   |  def foo(x: List[Int]): Boolean = ???
-- Error: tests/neg/abstract-report2.scala:23:6 ------------------------------------------------------------------------
23 |class JustOne extends Collection[Int] { // error
   |      ^
   |      class JustOne needs to be abstract.
   |      Missing implementation for member of trait Collection:
   |        def toArray[T](x$0: Array[Object & T]): Array[Object & T] = ???
